--- a/Web App/views/Wishlist.html
+++ b/Web App/views/Wishlist.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wishlist</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="Heading">
+        <h1 class="title">Wishlist</h1>
+        <p onclick="openNav()" class="Hamburger">&#8801;</p>
+    </div>
 </body>
 </html>
