--- a/Web App/views/Home.html
+++ b/Web App/views/Home.html
@@ -10,19 +10,23 @@
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
+    <script src="NavBar.js" defer></script>
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="mySidenav" class="sidenav">
         <div class="sidenav-header">
-            <a class="nav-header" href="Home.html"><h2>Home</h2></a> 
+            <a class="nav-header" href=""><h2>Home</h2></a> 
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         </div>
         
-        <a href="" class="">History</a>
-        <a href="" class="">Wishlist</a>
-        <a href="" class="">Settings</a>
+        <a href="history" class="">History</a>
+        <a href="wishlist" class="">Wishlist</a>
+        <a href="settings" class="">Settings</a>
+        <a href="account" class="">Account</a>
+        <a href="logout" class="">Logout</a>
     </div>
     <div class="Heading">
         <h1 class="title">TravLR</h1>
@@ -40,13 +44,6 @@
             maxZoom: 19,
             attribution: '&copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors'
         }).addTo(map);
-
-        function openNav() {
-            document.getElementById("mySidenav").style.width = "250px";
-        }
-        function closeNav() {
-            document.getElementById("mySidenav").style.width = "0";
-        }
     </script>
 </body>
 
