--- a/Web App/views/Location.html
+++ b/Web App/views/Location.html
@@ -25,6 +25,30 @@
         <h1 class="title">Location</h1>
         <p onclick="openNav()" class="Hamburger">&#8801;</p>
     </div>
+    <h2 id="location-name" style="text-align: center;"></h2>
+
+    <h2 style="text-align: center;">Visited here before?</h2>
+    <form id="location-form" style="padding-top: 10px;" action="add-location">
+        <label for="photos">Photos:</label>
+        <input type="file" id="photos-upload" name="photos" multiple><hr>
+        <label style="vertical-align: baseline;" for="notes">Notes:</label>
+        <textarea id="notes" name="notes" rows="4" cols="50"></textarea><hr>
+        <label for="rating">Rating:</label>
+        <select id="rating" name="rating">
+            <option value="1">1⭐️</option>
+            <option value="2">2⭐️</option>
+            <option value="3">3⭐️</option>
+            <option value="4">4⭐️</option>
+            <option value="5">5⭐️</option>
+        </select><br>
+        <input style="margin-top: 10px;" type="submit" value="Add to History">
+    </form>
     
+
+    <script>
+        // let locationHeader = document.getElementById("location-name");
+
+        // locationHeader.innerText = 
+    </script>
 </body>
 </html>
