--- a/Web App/views/History.html
+++ b/Web App/views/History.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History</title>
     <link rel="stylesheet" href="style.css">
+    <script src="NavBar.js" defer></script>
 </head>
 
 <body>
     <div id="mySidenav" class="sidenav">
         <div class="sidenav-header">
             <a class="nav-header" href="">
-                <h2>Home</h2>
+                <h2>History</h2>
             </a>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         </div>
