--- a/Web App/views/pages/history.ejs
+++ b/Web App/views/pages/history.ejs
@@ -2,7 +2,7 @@
 
 <% if (locations.length === 0) { %>
     <p id="errorMessage">No Locations Added</p>
-    <p>Visit <a href="home">Home</a> to add locations</p>
+    <p style="text-align: center;"">Visit <a href="home">Home</a> to add locations</p>
 <% } %>
 
 <% locations.forEach(location => { %>
