--- a/Web App/views/partials/header.ejs
+++ b/Web App/views/partials/header.ejs
@@ -12,6 +12,12 @@
     <script src="NavBar.js" defer></script>
 
     <link rel="stylesheet" href="/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
         <div id="mySidenav" class="sidenav">
@@ -28,7 +34,8 @@
             {name: "History", path: "/history"},
             {name: "Wishlist", path: "/wishlist"},
             {name: "Settings", path: "/settings"},
-            {name: "Account", path: "/account"}
+            {name: "Account", path: "/account"},
+            {name: "Logout", path: "/logout"}
         ];
         %>
 
@@ -49,4 +56,4 @@
 
     </div>
     <div class="content">
-        <h2 style="text-align: center;"> <%= title %> </h2>
+        <h2 style="text-align: center; margin-top: 0;"> <%= title %> </h2>
