--- a/Web App/views/pages/wishlist.ejs
+++ b/Web App/views/pages/wishlist.ejs
@@ -9,11 +9,12 @@
         <h2><%= item.country %></h2>
         <h3><%= item.city %></h3>
         <form method="GET" action="/location">
-            <input type="hidden" name="country" value="<%= item.country %>">
-            <input type="hidden" name="city" value="<%= item.city %>">
             <input type="hidden" name="latitude" value="<%= item.latitude %>">
             <input type="hidden" name="longitude" value="<%= item.longitude %>">
             <button type="submit">View Location</button>
+            <form method="POST" action="/remove-wishlist" style="display: inline;">
+                <input type="hidden" name="city" value="<%= item.city %>">
+                <button type="submit">Remove from Wishlist</button>
         </form>
     </div>
 <% }) %>
