--- a/Web App/public/style.css
+++ b/Web App/public/style.css
@@ -150,6 +150,16 @@ textarea {
     margin: 10px
 }
 
+@keyframes fadeOut {
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+
+.fade-out {
+    animation-name: fadeOut;
+    animation-duration: 3s;
+}
+
 .content {
     flex: 1;
 }
@@ -255,6 +265,7 @@ footer {
 .leaflet-popup-content-wrapper, .leaflet-popup-tip {
     background-color: #1d854a;
     box-shadow: 5px 10px 15px 5px #145A32;
+    cursor: pointer;
 }
 .leaflet-popup-content {
     text-align: center;
