--- a/Web App/views/partials/header.ejs
+++ b/Web App/views/partials/header.ejs
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+    <!-- polygon Detection to stop users from clicking ocean -->
+    <script src="https://unpkg.com/leaflet-pip/leaflet-pip.min.js"></script>
+
     <% } %>
     <script src="NavBar.js" defer></script>
 
